@@ -1,0 +1,3 @@
+	cpu	68020
+
+	reset
