@@ -1,0 +1,5 @@
++----------------------- Test Application SUPMODE ---------------------------+
+|                                                                            |
+| This tests enabling supervisor mode instructions via the command line.     |
+|                                                                            |
++----------------------------------------------------------------------------+
